--- a/assets/html/secondary.html
+++ b/assets/html/secondary.html
@@ -57,12 +57,12 @@
 <h2 class="heading">Education</h2>
 <div class="content">
 <div class="item">                      
-<h3 class="title"><i class="fa fa-graduation-cap"></i> Exchange Student</h3>
-<h4 class="university">Purdue University<span class="year">(2014-2015)</span></h4>
+<h3 class="title"><i class="fa fa-graduation-cap"></i> Purdue University </h3>
+<h4 class="university">Exchange Student<span class="year">(2014-2015)</span></h4>
 </div><!--//item-->
 <div class="item">
-<h3 class="title"><i class="fa fa-graduation-cap"></i> Industrial Engineer Undergrad Student </h3>
-<h4 class="university">Universidade Estadual de Campinas <span class="year">(2012-2017)</span></h4>
+<h3 class="title"><i class="fa fa-graduation-cap"></i> Universidade Estadual de Campinas </h3>
+<h4 class="university">B.S. Industrial Engineer<span class="year">(2012-2017)</span></h4>
 </div><!--//item-->
 </div><!--//content-->
 </div><!--//section-inner-->
