--- a/en/index.html
+++ b/en/index.html
@@ -81,7 +81,7 @@
                 </section><!--//section-->
 
                  <section class="latest section">
-                    <div class="section-inner" id"projetos">
+                    <div class="section-inner" id="projetos">
                         <h2 class="heading">Latest Projects</h2>
                         <div class="content">    
                             <div class="item featured text-center">
