--- a/assets/html/secondary.html
+++ b/assets/html/secondary.html
@@ -17,11 +17,13 @@
 </p>
 <div class="skillset">
 
+
+<!-- Explicar as barras -->
 <div class="item">
 <h3 class="level-title">C<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
 
 <div class="level-bar">
-<div class="level-bar-inner" data-level="60%">
+<div class="level-bar-inner" data-level="70%">
 </div>                                      
 </div><!--//level-bar-->                                 
 </div><!--//item-->
@@ -38,14 +40,14 @@
 <div class="item">
 <h3 class="level-title">MS Office and VBA<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Intermediate</span></h3>
 <div class="level-bar">
-<div class="level-bar-inner" data-level="60%">
+<div class="level-bar-inner" data-level="75%">
 </div>
 </div>                                      
 </div>                              
 <div class="item"><!--//item-->
 <h3 class="level-title">JavaScript & jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Beginner</span></h3>
 <div class="level-bar">
-<div class="level-bar-inner" data-level="20%">
+<div class="level-bar-inner" data-level="40%">
 </div>                                      
 </div><!--//level-bar-->                             
 </div>              
